--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "framer-motion": "^11.11.10",
     "next": "^14.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
