--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.651.1",
     "@repo/ui": "*",
     "framer-motion": "^11.11.10",
     "next": "^14.2.6",
