--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,8 +11,15 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.651.1",
+    "@fullcalendar/core": "^6.1.4",
+    "@fullcalendar/daygrid": "^6.1.4",
+    "@fullcalendar/interaction": "^6.1.1",
+    "@fullcalendar/react": "^6.1.4",
+    "@fullcalendar/timegrid": "^6.1.1",
     "@repo/ui": "*",
     "framer-motion": "^11.11.10",
+    "sweetalert2": "^11.7.1",
+    "sweetalert2-react-content": "^5.0.7",
     "next": "^14.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
