--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "dependencies": {
+    "next-auth": "^4.24.10",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "zod": "^3.23.8"
   }
 }
