--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -22,7 +22,10 @@
     "sweetalert2-react-content": "^5.0.7",
     "next": "^14.2.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "next-auth": "^4.24.10",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
