--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -17,10 +17,14 @@
     "@fullcalendar/react": "^6.1.4",
     "@fullcalendar/timegrid": "^6.1.1",
     "@repo/ui": "*",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
+    "@toast-ui/react-editor": "^3.2.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.10",
     "next": "^14.2.6",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "sweetalert2": "^11.7.1",
     "sweetalert2-react-content": "^5.0.7",
