--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,11 @@
     },
     "clean": {
       "cache": false
+    },
+    "start": { 
+      "dependsOn": ["build"],
+      "cache": false
     }
+    
   }
 }
