--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -29,7 +29,8 @@
     "sweetalert2": "^11.7.1",
     "sweetalert2-react-content": "^5.0.7",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
