--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -19,6 +19,7 @@
     "@repo/ui": "*",
     "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.3",
+    "@x1mrdonut1x/nouislider-react": "^3.4.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.10",
     "next": "^14.2.6",
