--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,10 +10,17 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.651.1",
     "@repo/ui": "*",
+    "framer-motion": "^11.11.10",
     "next": "^14.2.6",
+    "next-auth": "^4.24.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sweetalert2": "^11.7.1",
+    "sweetalert2-react-content": "^5.0.7",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
