--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -21,6 +21,7 @@
     "@toast-ui/react-editor": "^3.2.3",
     "@x1mrdonut1x/nouislider-react": "^3.4.3",
     "date-fns": "^4.1.0",
+    "event-source-polyfill": "^1.0.31",
     "framer-motion": "^11.11.10",
     "next": "^14.2.6",
     "next-auth": "^4.24.10",
@@ -38,6 +39,7 @@
     "@repo/eslint-config": "*",
     "@repo/tailwind-config": "*",
     "@repo/typescript-config": "*",
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
