--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,8 +17,10 @@
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-swipeable": "^7.0.2",
     "sweetalert2": "^11.7.1",
     "sweetalert2-react-content": "^5.0.7",
+    "swiper": "^11.1.14",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
