--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -32,7 +32,8 @@
     "sweetalert2-react-content": "^5.0.7",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.23.8",
-    "zustand": "^5.0.0-rc.2"
+    "zustand": "^5.0.0-rc.2",
+    "livekit-client": "2.1.5"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
