--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -23,8 +23,10 @@
     "date-fns": "^4.1.0",
     "event-source-polyfill": "^1.0.31",
     "framer-motion": "^11.11.10",
+    "livekit-client": "2.1.5",
     "next": "^14.2.6",
     "next-auth": "^4.24.10",
+    "openvidu-browser": "^2.30.1",
     "react": "^17.0.2",
     "react-datepicker": "^7.5.0",
     "react-dom": "^17.0.2",
@@ -32,8 +34,7 @@
     "sweetalert2-react-content": "^5.0.7",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.23.8",
-    "zustand": "^5.0.0-rc.2",
-    "livekit-client": "2.1.5"
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
