--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.651.1",
     "@repo/ui": "*",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.11.10",
+    "lucide-react": "^0.461.0",
     "next": "^14.2.6",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
