--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "sweetalert2": "^11.7.1",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.14",
+    "vaul": "^1.1.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
