refactor: build error 수정

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,8 @@
       "./src/components/*.tsx",
       "./src/components/*.ts"
     ],
-    "./hooks/*": "./src/hooks/*"
+    "./hooks/*": "./src/hooks/*",
+    "./types/*": "./src/types/*"
   },
   "license": "MIT",
   "scripts": {
