fix: build test and component

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.2"
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2"
   }
 }
