--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,8 +4,7 @@
     "plugins": [{ "name": "next" }],
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["./src/components/*"],
-      "@assets/*": ["./public/assets"]
+      "@repo/web/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
