--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -4,7 +4,7 @@
     "plugins": [{ "name": "next" }],
     "baseUrl": ".",
     "paths": {
-      "@repo/client/*": ["./src/*"]
+      "@repo/admin/*": ["./src/*"]
     }
   },
   "include": [
