--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -10,40 +10,9 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.651.1",
-    "@fullcalendar/core": "^6.1.4",
-    "@fullcalendar/daygrid": "^6.1.4",
-    "@fullcalendar/interaction": "^6.1.1",
-    "@fullcalendar/react": "^6.1.4",
-    "@fullcalendar/timegrid": "^6.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@repo/ui": "*",
-    "@x1mrdonut1x/nouislider-react": "^3.4.3",
-    "date-fns": "^4.1.0",
-    "event-source-polyfill": "^1.0.31",
-    "framer-motion": "^11.11.10",
-    "livekit-client": "2.1.5",
-    "openvidu-browser": "^2.30.1",
-    "next": "^14.2.6",
-    "next-auth": "^4.24.10",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.0-rc.2"
+    "event-source-polyfill": "^1.0.31"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.2.3",
-    "@repo/eslint-config": "*",
-    "@repo/tailwind-config": "*",
-    "@repo/typescript-config": "*",
-    "@types/event-source-polyfill": "^1.0.5",
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "@types/event-source-polyfill": "^1.0.5"
   }
 }
