--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -11,9 +11,9 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "src/components/pages/main/mentor/meeting/Meeting.tsx",
-    "src/components/pages/main/mentor/meeting/MeetingCopy.jsx"
+    "**/*.js",
+    "**/*.jsx",
+    ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
