--- a/package.json
+++ b/package.json
@@ -23,12 +23,6 @@
     ]
   },
   "devDependencies": {
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "turbo": "^2.1.3",
-    "eslint": "^9.13.0",
     "@next/eslint-plugin-next": "^14.2.3",
     "@repo/eslint-config": "*",
     "@repo/tailwind-config": "*",
@@ -37,8 +31,14 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.18",
+    "eslint": "^9.13.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
+    "turbo": "^2.1.3",
     "typescript": "^5.3.3"
   },
   "engines": {
@@ -46,31 +46,32 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.651.1",
-    "@repo/ui": "*",
-    "classnames": "^2.5.1",
-    "framer-motion": "^11.11.10",
-    "lucide-react": "^0.461.0",
-    "next": "^14.2.6",
-    "next-auth": "^4.24.10",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-swipeable": "^7.0.2",
-    "sweetalert2": "^11.4.8",
-    "sweetalert2-react-content": "^5.0.7",
-    "swiper": "^11.1.14",
-    "vaul": "^1.1.1",
-    "zod": "^3.23.8",
-    "zustand": "^5.0.0-rc.2",
     "@fullcalendar/core": "^6.1.4",
     "@fullcalendar/daygrid": "^6.1.4",
     "@fullcalendar/interaction": "^6.1.1",
     "@fullcalendar/react": "^6.1.4",
     "@fullcalendar/timegrid": "^6.1.1",
+    "@repo/ui": "*",
     "@x1mrdonut1x/nouislider-react": "^3.4.3",
+    "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.10",
     "livekit-client": "2.1.5",
+    "lucide-react": "^0.461.0",
+    "next": "^14.2.6",
+    "next-auth": "^4.24.10",
     "openvidu-browser": "^2.30.1",
+    "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "react-dom": "^19.0.0",
+    "react-quill": "^2.0.0",
+    "react-swipeable": "^7.0.2",
+    "sweetalert2": "^11.4.8",
+    "sweetalert2-react-content": "^5.0.7",
+    "swiper": "^11.1.14",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "vaul": "^1.1.1",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   }
 }
