--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,6 +7,12 @@
       "@repo/web/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "next-auth.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
