--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@fullcalendar/react": "^6.1.4",
     "@fullcalendar/timegrid": "^6.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
     "@repo/ui": "*",
     "@x1mrdonut1x/nouislider-react": "^3.4.3",
     "classnames": "^2.5.1",
@@ -67,6 +68,7 @@
     "react-dom": "^19.0.0",
     "react-quill": "^2.0.0",
     "react-swipeable": "^7.0.2",
+    "recharts": "^2.14.1",
     "sweetalert2": "^11.4.8",
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.14",
