--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "sweetalert2-react-content": "^5.0.7",
     "swiper": "^11.1.14",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "use-debounce": "^10.0.4",
     "vaul": "^1.1.1",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
